# modded-nanotabpfn

./: .gitignore  README.md  pyproject.toml  run.sh  todos  train_nano.py
