[project]
name = "modded-nanotabpfn"
version = "0.1.0"
description = "speedrun"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.0",
    "numpy>=2.3.3",
    "openml>=0.15.1",
    "pandas>=2.3.3",
    "pfns==0.3.0",
    "requests>=2.32.5",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
]
